# 3D-renderer-from-scratch

./: .gitignore  CMakeLists.txt  Project Archive Link  README.md  Shader.cpp  imgui.ini  vector.cpp
Controller/Header/: Controller.h
Controller/cpp/: Controller.cpp
Model/: Camera.cpp  Camera.h  ObjectManager.h
Model/GLState/Header/: Shader.h
Model/Mesh/Header/: Shape.h  VertexData.h
Model/Mesh/cpp/: Shape.cpp
Shaders/: default.frag  default.vert
View/Header/: Scene.h  Window.h
View/cpp/: Scene.cpp  Window.cpp
assets/: default.frag  default.vert  lit.frag  lit.vert
src/: .clang-format  Camera.cpp  Camera.h  Controller.cpp  Controller.h  ObjectManager.cpp  ObjectManager.h  Scene.cpp  Scene.h  UI.cpp  UI.h  Window.cpp  Window.h  main.cpp
src/3D Objects/: Cylinder.h  Lightsource.cpp
src/3D_Objects/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Lightsource.cpp  Lightsource.h  Object3D.cpp  Object3D.h  Sphere.cpp  Sphere.h  VertexData.cpp  VertexData.h
src/GLstate/: Shader.cpp  Shader.h  VAO.cpp
src/Graphics_Abstraction/: Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  VAO.cpp  VAO.h
src/Interaction/: Controller.cpp  Controller.h  UI.cpp  UI.h
src/Mesh/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Lightsource.cpp  Lightsource.h  Object3D.cpp  Object3D.h  Sphere.cpp  Sphere.h  VertexData.cpp  VertexData.h
src/Rendering/: Camera.cpp  Camera.h  Material.cpp  Material.h  ObjectManager.cpp  ObjectManager.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/Utility/: DeltaTime.cpp  DeltaTime.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
src/imgui/: imgui.ini
